--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,10 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+body{
+	background: radial-gradient(circle,
+	 rgba(2,0,36,1) 0%, rgba(19,19,111,1) 35%,
+	 rgba(8,20,129,1) 42%, rgba(7,46,146,1) 54%, 
+	 rgba(6,72,163,1) 61%, rgba(0,212,255,1) 100%);
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+
